added files from v1 folder of jhembe branch to main branch

--- a/index.html
+++ b/index.html
@@ -1,14 +1,355 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Section</title>
+    <title>Mental Health Website</title>
+    <link rel="stylesheet" href="./scripts/bootstrap.css">
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/styleFoot.css">
 </head>
+
 <body>
-    <section>
-        <!-- Your section here -->
+    <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand" href="./about_us/index.html#parAbt">mHealth</a>
+        <div class="navbar-toggler">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#home">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./about_us/index.html#parAbt">About Us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#services">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#footer">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./faq/index.html">Faq</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="hero-section" id="home">
+        <div class="hero-section-content">
+            <div class="container">
+                <h1>Welcome to Your Mental Health Journey</h1>
+                <p>Find the support and resources you need for a healthy mind and well-being.</p>
+                <a class="btn btn-primary" href="#about">Get Started</a>
+            </div>
+        </div>
+    </div>
+
+    <section class="what_is_mhealth" id="what_is_mhealth">
+        <div class="head">
+            <h2>What is Mental Health ?</h2>
+        </div>
+        <div class="main-content">
+            <p>
+                Mental Health refers to our emotional, psychological, and social well-being. It affects how we
+                think, geel and act. It also helps determine how we handle stress, relate to others, and make
+                healthy choices. Mental health is important at every stage of life.
+            </p>
+            <p>
+                Mental and physical health are equally important components of overall health. Mental health
+                problems such as depression increase the risk of some physical health problems, like diabetes,heart
+                disease, and stroke. Likewise, the presence of chronic conditions can increase the risk of mental
+                illness.
+            </p>
+        </div>
+
+        <div class="subs">
+            <div class="sub-left">
+                <h4 class="title">Can your mental health change over time ?</h4>
+                <p>
+                    Yes, it's important to rememeber that a person's mental health can change over time, depending
+                    on many factors. When the expectations placed on a person exceed their resources and coping
+                    abilities, their mental health could decline. For example, if someone is working long hours,
+                    caring for a relative, or experiencng economic hardship, they may experience poor mental health.
+                </p>
+                <p>
+                    Mental health problems are commonly refffrered to as <i>Mental disorders</i>. A mental disorder
+                    is characterized by a clinically significant disturbance in an individual's cognition, emotional
+                    regulation or behaviour
+                </p>
+            </div>
+            <div class="line"></div>
+            <div class="sub-right">
+                <h4 class="title">
+                    How common are mental illnesses?
+                </h4>
+                <p>
+                    Mental illnesses are among the most common health conditions in the United states,More that 1 in
+                    5 US adults live with a mental illness. Over 1 in 5 youths (age 13-18). About 1 in 25 U.S
+                    adults lives with a serious mental illness such as schizophrenia, bipolar disorder, or major
+                    depression
+                </p>
+                <h4 class="title">
+                    What causes mental illness ?
+                </h4>
+                <p class="tit">Factors that can lead to mental illness include:-</p>
+                <ul>
+                    <li>Adverse Childhood experiences, such as trauma or a history of abuse (for example, child abuse,
+                        sexual assault, witnessing violence, etc)</li>
+                    <li>Experiences related to oter ongoing (chronic) medical conditions, such as cancer or diabetes.
+                    </li>
+                    <li>Biological factors or chemical imbalances in the brain</li>
+                    <li>Use of aclcohol or drugs</li>
+                    <li>Having feeling of loneliness or isolation</li>
+                </ul>
+            </div>
+        </div>
     </section>
+
+    <section class="mhealth_conditions">
+        <div class="head">
+            <h2>Mental Health Conditions</h2>
+        </div>
+        <div class="cards">
+            <div class="card">
+                <div class="img img1">
+                </div>
+                <div class="content">
+                    <p class="title">Anxiety</p>
+                    <p>
+                        Persistent unease, excessive worry, and fear. It can disrupt daily life and relationships,
+                        causing phusical and emotional symptoms. Symptoms can be very severe enough to result in
+                        significant
+                        distress or significant impairment in functioning.
+                    </p>
+                    <div class="link"><a href="#">More</a></div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="img img2">
+                </div>
+                <div class="content">
+                    <p class="title">Depression</p>
+                    <p>
+                        Overwhelming sadness, loss of interest, and lack of energy. It affects moods, thoughts, and
+                        daily
+                        functioning. During a depressive eppisode, persorn experiences depressed mood or loss of
+                        pleasure or
+                        interest in activities, for most of the day, nearly every day, for atleast two weeks.
+                    <div class="link"><a href="#">Read More</a></div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="img img3">
+                </div>
+                <div class="content">
+                    <p class="title">Bipolar Disorder</p>
+                    <p>
+                        A complex mental health condition characterized by extreme shifts in mood, energy and activity
+                        levels. It involves episodes of mania, where individuals experience heightened euphoria, and
+                        impulsivity, followed by periods of depression.
+                    </p>
+                    <div class="link"><a href="#">Read More</a></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="prologue">
+            <p>Remember, mental health matters. It's okay to not be okay. Seek understanding, show compassiona, and
+                break the stigma. Together we can create a supportive community where everyone feels heard, valued, and
+                empowered. Let's embrace mental well-being and foster a world of acceptance and healing</p>
+        </div>
+        </div>
+
+    </section>
+    
+    <!-- Philes's part starts here -->
+    <section class="cards">
+        <div class="card">
+            <div class="img img1">
+            </div>
+            <div class="content">
+                <p class="title">Get Restful sleep</p>
+                <p>
+                    Nurturing your mind bgins with a Restful slumber. Embrace the healing power of sleep, allowing your
+                    mind to rejuvenate, dreams to weave tranquility and worries to fade into the night. Awaken
+                    refreshed, ready to face the day with renewed strength and resilience.
+                </p>
+                <div class="link"><a href="#">More</a></div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="img img2">
+            </div>
+            <div class="content">
+                <p class="title">Nourish Connections</p>
+                <p>
+                    In a digital world filled with noise, grant yourself moments of tranquility. Limit your time on
+                    social media, reclaiming precious hours for selft-reflextion, authentic connections and meaningful
+                    experiences. Embrace the freedom to be present.
+
+                </p>
+                <div class="link"><a href="#">Read More</a></div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="img img3">
+            </div>
+            <div class="content">
+                <p class="title">Nourish Connections</p>
+                <p>
+                    Amid life's challenges, cherish the bonds that uplift your spirit. Invest time in nurturing
+                    relationships that bring you joy, understanding, and support. Share heartfelt converations, create
+                    lasting memories and embrace comfort of knowing your are never alone.
+
+                </p>
+                <div class="link"><a href="#">Read More</a></div>
+            </div>
+        </div>
+    </section>
+
+    <div class="prologue">
+        <p>Pause, Breathe, and Nurture your soul. Explore these gentle reminders to uplift your well-being. Take a
+            moment to embrase self care, one step at a time. Ready for more inspiration ? Click below to unveil
+            additional cards and delve deeper into your mental health journey</p>
+        <button id="toggleCards">More Cards</button>
+    </div>
+
+    <section class="cards cards-add-none" id="additional-cards">
+        <div class="card">
+            <div class="img img4">
+            </div>
+            <div class="content">
+                <p class="title">Embrace Your Rythm</p>
+                <p>
+                    Let your body be your guide on the path to wellness. Engage in physical activities that bring you
+                    joy and energize your spirit. Dance, walk, stretch, or sweat. Move in ways that reasonate with your
+                    unique being. Embrace the freedom to honor your body's needs, nurturing your mental health with
+                    every step, beat and breath.
+                </p>
+                <div class="link"><a href="#">Read More</a></div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="img img5">
+            </div>
+            <div class="content">
+                <p class="title">Nourish from within</p>
+                <p>
+                    Discover the power of mindful eating, savoring each bit as a gift to your well-beng. Choose
+                    nutrient-rich foods that fuel your body and ming with vitality. Embrace vibrant colors, flavours and
+                    textures nature offers, nurturing from within. With each nourishing meal, you cultivate a foundation
+                    of
+                    wellness and foster a harmonious relationship with your body.
+                </p>
+                <div class="link"><a href="#">Read More</a></div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="img img6">
+            </div>
+            <div class="content">
+                <p class="title">Gentle Selft-Compassion</p>
+                <p>
+                    Amid life's demands, remember to honor your limits and embrace self-care. Listen to the whispers of
+                    your
+                    body and mind, knowing when to slow down, recharge and find solace. In moments of rest, you allow
+                    yourself the space to heal, rejuvenate, and gather strength. Embrace the art of gentle
+                    self-compassion,
+                    nurturing your mental well-being with tender care.
+                </p>
+                <div class="link"><a href="#">Read More</a></div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- FOOTER SECTION START'S HERE -->
+    <section class="footer" id="footer">
+
+        <div class="footmain">
+
+            <!-- <div class="map-cont"> -->
+
+            <iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+                src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=university of dodoma&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
+
+            </iframe>
+            <!-- </div> -->
+
+            <div class="form-cont">
+                <form>
+                    <!-- Name input -->
+                    <div class="form-outline mb-4">
+                        <input type="text" id="form4Example1" class="form-control" placeholder="Name" />
+                        <!-- <label class="form-label" for="form4Example1">Name</label> -->
+                    </div>
+
+                    <!-- Email input -->
+                    <div class="form-outline mb-4">
+                        <input type="email" id="form4Example2" class="form-control" placeholder="Email address" />
+                        <!-- <label class="form-label" for="form4Example2">Email address</label> -->
+                    </div>
+
+                    <!-- Message input -->
+                    <div class="form-outline mb-4">
+                        <textarea class="form-control" id="form4Example3" rows="4"></textarea>
+                        <label class="form-label" for="form4Example3">Message</label>
+                    </div>
+
+                    <!-- Submit button -->
+                    <button type="submit" class="btn btn-primary btn-block mb-4">Send</button>
+                </form>
+            </div>
+
+        </div>
+
+        <footer>
+            <div class="foot-start">
+            <!-- <h2>Quick links</h2> -->
+            <ul class="contacts">
+                <h5>Contacts</h5> 
+                <li><a class="text-light" href="tel:+255262310003">Tel: (+255) 262 310 003</a></li>
+                <li>1 Benjamin Mkapa road, 41218 Iyumbu, Dodoma.</li>
+                <li><a href="email:info@udom.ac.tz">info@udom.ac.tz</a></li>
+            </ul>
+            <ul class="quick-link">
+                <h5>Quick Links</h5>
+                <li><a href="https://www.mirembe.or.tz/">Mirembe Hospital</a></li>
+                <li><a href="https://www.mloganzila.or.tz/psychiatry">Muhimbili psychiatry Department</a></li>
+                <li><a href="#">International psychiatry Concern</a></li>
+            </ul>
+            </div>
+
+
+            <div class="final-foot">
+                <p>This website is created and maintained by <a href="https://www.udom.ac.tz/">University of Dodoma</a>
+                    computer
+                    science students</p>
+                <p> &COPY; Copyright 2023, All Rights Reserved</p>
+            </div>
+        </footer>
+
+    </section>
+
+    <div class="scroll-to-top">
+        <i class="fas fa-arrow-up"></i>
+    </div>
+
+    <script src="./scripts/jquery.js"></script>
+    <script src="./scripts/bootstrap.js"></script>
+    <script src="./scripts/app.js"></script>
+    <script src="./scripts/addcards.js"></script>
 </body>
+
 </html>
