--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
     <section class="mhealth_conditions">
         <div class="head">
-            <h2>Mental Health Conditions</h2>
+            <h2>Conditions</h2>
         </div>
         <div class="cards">
             <div class="card">
@@ -170,7 +170,11 @@
     </section>
     
     <!-- Philes's part starts here -->
+    <div class="head">
+        <h2>Conditions</h2>
+    </div>
     <section class="cards">
+
         <div class="card">
             <div class="img img1">
             </div>
