added links to more about mental health

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="container">
                 <h1>Welcome to Your Mental Health Journey</h1>
                 <p>Find the support and resources you need for a healthy mind and well-being.</p>
-                <a class="btn btn-primary" href="#about">Get Started</a>
+                <a class="btn btn-primary" href="#what_is_mhealth">Get Started</a>
             </div>
         </div>
     </div>
@@ -126,7 +126,7 @@
                         significant
                         distress or significant impairment in functioning.
                     </p>
-                    <div class="link"><a href="#">More</a></div>
+                    <div class="link"><a href="./more_conditions/index2.html">More</a></div>
                 </div>
             </div>
 
@@ -141,7 +141,7 @@
                         functioning. During a depressive eppisode, persorn experiences depressed mood or loss of
                         pleasure or
                         interest in activities, for most of the day, nearly every day, for atleast two weeks.
-                    <div class="link"><a href="#">Read More</a></div>
+                    <div class="link"><a href="./more_conditions/index2.html">Read More</a></div>
                 </div>
             </div>
 
@@ -155,7 +155,7 @@
                         levels. It involves episodes of mania, where individuals experience heightened euphoria, and
                         impulsivity, followed by periods of depression.
                     </p>
-                    <div class="link"><a href="#">Read More</a></div>
+                    <div class="link"><a href="./more_conditions/index2.html">Read More</a></div>
                 </div>
             </div>
         </div>
@@ -170,7 +170,7 @@
     </section>
     
     <!-- Philes's part starts here -->
-    <div class="head">
+    <div id="head-philes">
         <h2>Conditions</h2>
     </div>
     <section class="cards">
