--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     
     <!-- Philes's part starts here -->
     <div id="head-philes">
-        <h2>Conditions</h2>
+        <h2>Self Care</h2>
     </div>
     <section class="cards">
 
@@ -213,7 +213,6 @@
                     Amid life's challenges, cherish the bonds that uplift your spirit. Invest time in nurturing
                     relationships that bring you joy, understanding, and support. Share heartfelt converations, create
                     lasting memories and embrace comfort of knowing your are never alone.
-
                 </p>
                 <div class="link"><a href="#">Read More</a></div>
             </div>
@@ -277,6 +276,84 @@
         </div>
     </section>
 
+    <section class="support">
+        <div class="container supp-contain">
+            <h2>Support</h2>
+            <div class="resources" id="support">
+                <div class="resource-category mental-orgs">
+                    <h3>Mental Health Organizations</h3>
+                    <ul>
+                        <li><a href="https://www.nami.org/">National Alliance on Mental Illness (NAMI)</a></li>
+                        <li><a href="https://www.mhanational.org/">Mental Health America</a></li>
+                        <li><a href="https://www.nimh.nih.gov/index.shtml">National Institute of Mental Health
+                                (NIMH)</a></li>
+                    </ul>
+                </div>
+                <div class="resource-category supp-groups">
+                    <h3>Support Groups</h3>
+                    <ul>
+                        <li><a href="https://www.supportgroupscentral.com/">SupportGroupsCentral</a></li>
+                        <li><a href="https://www.psychologytoday.com/us/groups">Psychology Today Support Groups</a></li>
+                        <li><a href="https://www.mentalhealthamerica.net/find-support-groups">Mental Health America
+                                Support Groups</a></li>
+                    </ul>
+                </div>
+                <div class="resource-category crisis">
+                    <h3>Crisis Hotlines</h3>
+                    <ul>
+                        <li><a href="tel:1-800-273-8255">National Suicide Prevention Lifeline: 1-800-273-TALK (8255)</a>
+                        </li>
+                        <li><a href="tel:1-800-985-5990">Disaster Distress Helpline: 1-800-985-5990</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="chat">
+                <h3>Chat With a Professional</h3>
+                <p>Connect with a licensed mental health professional or trained volunteer for free, confidential
+                    support.</p>
+                <a href="https://www.7cups.com/" class="button">Chat Now</a>
+            </div>
+        </div>
+    </section>
+
+
+
+
+    <section class="resources">
+        <div class="container res-contain">
+            <h2>Resources</h2>
+            <div class="resource-categories">
+                <div class="category">
+                    <h3>Depression</h3>
+                    <ul>
+                        <li><a href="#">"Feeling Good: The New Mood Therapy" by David Burns</a></li>
+                        <li><a href="#">"The Noonday Demon" by Andrew Solomon</a></li>
+                        <li><a href="#">"Reasons to Stay Alive" by Matt Haig</a></li>
+                    </ul>
+                    <p class="where-to-get">Available on Amazon and in most bookstores</p>
+                </div>
+                <div class="category">
+                    <h3>Anxiety</h3>
+                    <ul>
+                        <li><a href="#">"The Anxiety and Phobia Workbook" by Edmund Bourne</a></li>
+                        <li><a href="#">"My Age of Anxiety" by Scott Stossel</a></li>
+                        <li><a href="#">"The Worry Trick" by David Carbonell</a></li>
+                    </ul>
+                    <p class="where-to-get">Available on Amazon and in most bookstores</p>
+                </div>
+                <div class="category">
+                    <h3>Trauma</h3>
+                    <ul>
+                        <li><a href="#">"The Body Keeps the Score" by Bessel van der Kolk</a></li>
+                        <li><a href="#">"Trauma and Recovery" by Judith Herman</a></li>
+                        <li><a href="#">"The Boy Who Was Raised as a Dog" by Bruce Perry and Maia Szalavitz</a></li>
+                    </ul>
+                    <p class="where-to-get">Available on Amazon and in most bookstores</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- FOOTER SECTION START'S HERE -->
     <section class="footer" id="footer">
@@ -318,6 +395,7 @@
 
         </div>
 
+        
         <footer>
             <div class="foot-start">
             <!-- <h2>Quick links</h2> -->
@@ -354,6 +432,7 @@
     <script src="./scripts/bootstrap.js"></script>
     <script src="./scripts/app.js"></script>
     <script src="./scripts/addcards.js"></script>
+    <script src="./scripts/playaudio.js"></script>
 </body>
 
 </html>
