--- a/about_us/index.html
+++ b/about_us/index.html
@@ -9,11 +9,39 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="../scripts/bootstrap.css">
 </head>
 
 <body>
     <section>
-
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" href="./about_us/index.html#parAbt">mHealth</a>
+            <div class="navbar-toggler">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./about_us/index.html#parAbt">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#services">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#footer">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./faq/index.html">Faq</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    
         <div class="hero-section">
             <!-- <p>About Us</p> -->
 
@@ -132,9 +160,10 @@
 
 
 
-    <footer>
+    <footer class="foot">
         <p>Copyright 2023 Mental Health. All Rights Reserved.</p>
     </footer>
+    <script src="../scripts/bootstrap.js"></script>
 </body>
 
 </html>
