modified typography and edited quick links on about us

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./scripts/bootstrap.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/styleFoot.css">
+    <link rel="stylesheet" href="./styles/header.css">
 </head>
 
 <body>
