--- a/faq/index.html
+++ b/faq/index.html
@@ -7,6 +7,7 @@
   <title>FAQ Page</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../styles/header.css">
 </head>
 
 <body>
