ADDED : Navbar to more cards, fixed scrolling and referencing

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         significant
                         distress or significant impairment in functioning.
                     </p>
-                    <div class="link"><a href="./more_conditions/anxiety.html">More</a></div>
+                    <div class="link"><a href="./more_conditions/index2.html#anxiety">More</a></div>
                 </div>
             </div>
 
@@ -142,7 +142,7 @@
                         functioning. During a depressive eppisode, persorn experiences depressed mood or loss of
                         pleasure or
                         interest in activities, for most of the day, nearly every day, for atleast two weeks.
-                    <div class="link"><a href="./more_conditions/depression.html">Read More</a></div>
+                    <div class="link"><a href="./more_conditions/index2.html#depression">Read More</a></div>
                 </div>
             </div>
 
@@ -156,7 +156,7 @@
                         levels. It involves episodes of mania, where individuals experience heightened euphoria, and
                         impulsivity, followed by periods of depression.
                     </p>
-                    <div class="link"><a href="./more_conditions/bipolar.html">Read More</a></div>
+                    <div class="link"><a href="./more_conditions/index2.html#bipolar">Read More</a></div>
                 </div>
             </div>
         </div>
