--- a/more_conditions/index2.html
+++ b/more_conditions/index2.html
@@ -7,11 +7,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../styles/header.css">
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand" href="../index.html#home">mHealth</a>
+        <div class="navbar-toggler">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html#home">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#anxiety">Anxiety</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#depression">Depression</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#bipolar">bipolar</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#ptsd">PTSD</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#schizophrenia">Schizophrenia</a>
+              </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../faq/index.html">Faq</a>
+              </li>
+          </ul>
+        </div>
+      </nav>
+      
     <section class="hero">
-        <div class="container">
+        <div class="container" id="anxiety">
             <div class="photo"></div>
             <div class="content">
                 <h3> Anxiety Disorder </h3>
@@ -383,7 +419,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container" id="depression">
             <div class="photo1"></div>
             <div class="content">
                 <h3> Depression </h3>
@@ -665,7 +701,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container" id="bipolar">
             <div class="photo2"></div>
             <div class="content">
                 <h3> Bipolar Disorder </h3>
@@ -987,7 +1023,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container" id="ptsd">
             <div class="photo3"></div>
             <div class="content">
                 <h3> Post-Traumatic Stress Disorder (PTSD) </h3>
@@ -1316,7 +1352,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container" id="schizophrenia">
             <div class="photo4"></div>
             <div class="content">
                 <h3> Schizophrenia </h3>
@@ -1596,6 +1632,14 @@
         </div>
 
     </section>
+    
+    <div class="scroll-to-top">
+        <i class="fas fa-arrow-up"></i>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
