ADDED : evaluation module to path

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                     <a class="nav-link" href="#footer">Contact</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="./evaluation/index.html">Evaluation</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="./faq/index.html">Faq</a>
                 </li>
             </ul>
