--- a/faq/index.html
+++ b/faq/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="../styles/header.css">
+  
 </head>
 
 <body>
@@ -24,7 +25,7 @@
           <a class="nav-link" href="../index.html#home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./about_us/index.html#parAbt">About Us</a>
+          <a class="nav-link" href="../about_us/index.html#parAbt">About Us</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#services">Services</a>
@@ -38,6 +39,7 @@
       </ul>
     </div>
   </nav>
+
   <div class="container">
     <h1>Frequently Asked Questions</h1>
 
