FIXED : paths for title bar

--- a/faq/index.html
+++ b/faq/index.html
@@ -28,10 +28,7 @@
           <a class="nav-link" href="../about_us/index.html#parAbt">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#services">Services</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#footer">Contact</a>
+          <a class="nav-link" href="../index.html#footer">Contact</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./faq/index.html">Faq</a>
