--- a/about_us/index.html
+++ b/about_us/index.html
@@ -186,7 +186,7 @@
         </footer>
     </div>
     <script src="../scripts/jquery.js"></script>
-    <script src="../faq/app.js"></script>
+    <script src="../scripts/app.js"></script>
     <script src="../scripts/playaudio.js"></script>
     <script src="../scripts/bootstrap.js"></script>
 </body>
